--- a/app/src/main/res/layout/item_persona.xml
+++ b/app/src/main/res/layout/item_persona.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="10sp"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
@@ -13,13 +14,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imgFoto"
-                android:layout_width="96dp"
-                android:layout_height="96dp"
-                android:layout_weight="0"
-                app:srcCompat="@drawable/images" />
 
             <LinearLayout
                 android:layout_width="match_parent"
