Aplicacion funcional local

--- a/app/src/main/res/layout/activity_detalle_pesona.xml
+++ b/app/src/main/res/layout/activity_detalle_pesona.xml
@@ -32,6 +32,7 @@
             android:id="@+id/menu_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="eliminar"
             android:src="@android:drawable/ic_menu_delete"
             fab:fab_label="@string/etiqueta_boton_eliminar"
             fab:fab_size="mini" />
