--- a/app/src/main/res/layout/activity_detalle_pesona.xml
+++ b/app/src/main/res/layout/activity_detalle_pesona.xml
@@ -53,6 +53,12 @@
             android:textSize="24sp"
             android:textStyle="bold" />
 
+        <ImageView
+            android:id="@+id/imgFotoDetalle"
+            android:layout_width="match_parent"
+            android:layout_height="96dp"
+            android:src="@drawable/images2" />
+
         <TableLayout
             android:id="@+id/tblTablaDetalle"
             android:layout_width="match_parent"
