--- a/app/src/main/res/layout/item_persona.xml
+++ b/app/src/main/res/layout/item_persona.xml
@@ -15,6 +15,14 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imgFoto"
+                android:layout_width="96dp"
+                android:layout_height="96dp"
+                android:src="@drawable/images2"
+                app:civ_border_width="2dp"
+                app:civ_border_color="#FF000000" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
