--- a/app/src/main/res/layout/activity_agregar_persona.xml
+++ b/app/src/main/res/layout/activity_agregar_persona.xml
@@ -16,6 +16,14 @@
         android:textSize="24sp"
         android:textStyle="bold" />
 
+    <ImageView
+        android:id="@+id/imgFotoSeleccionada"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
+        android:onClick="seleccionar_foto"
+        app:srcCompat="@android:drawable/ic_menu_gallery" />
+
     <EditText
         android:id="@+id/txtCedula"
         android:layout_width="match_parent"
@@ -65,4 +73,5 @@
             android:text="@string/boton_limpiar"
             android:textStyle="bold" />
     </LinearLayout>
+
 </LinearLayout>
