--- a/app/src/main/res/layout/item_persona.xml
+++ b/app/src/main/res/layout/item_persona.xml
@@ -19,9 +19,8 @@
                 android:id="@+id/imgFoto"
                 android:layout_width="96dp"
                 android:layout_height="96dp"
-                android:src="@drawable/images2"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#FF000000" />
+                app:civ_border_color="#FF000000"
+                app:civ_border_width="2dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
